--- a/.github/workflows/webapp.yml
+++ b/.github/workflows/webapp.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/webapp-frontend:latest ./frontend
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/webapp-frontend:latest
+
   build-backend:
     name: Build Backend
     runs-on: self-hosted
@@ -38,13 +39,21 @@ jobs:
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/webapp-backend:latest ./backend
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/webapp-backend:latest
+
   deploy-prod:
     name: Deploy to PROD (K8S)
     runs-on: self-hosted
     needs: [build-frontend, build-backend]
     steps:
-      - name: Test Step
-        run: echo "Test step"
+      - name: Deploy Frontend to PROD
+        run: |
+          kubectl set image deployment/frontend-deployment frontend=mtararujs/webapp-frontend:latest
+          kubectl rollout restart deployment/frontend-deployment
+      - name: Deploy Backend to PROD
+        run: |
+          kubectl set image deployment/backend-deployment backend=mtararujs/webapp-backend:latest
+          kubectl rollout restart deployment/backend-deployment
+
   api-tests-prod:
     name: API tests on PROD
     runs-on: self-hosted
@@ -52,6 +61,7 @@ jobs:
     steps:
       - name: Test Step
         run: echo "Test step"
+
   rollback-backend:
     name: Backend rollback on PROD
     runs-on: self-hosted
