--- a/.github/workflows/webapp.yml
+++ b/.github/workflows/webapp.yml
@@ -12,13 +12,22 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Path Filter
+        uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            frontend:
+              - 'frontend/**'
       - name: Docker login
+        if: steps.filters.outputs.frontend == 'true'
         uses: docker/login-action@v3
         with: 
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
           logout: false
       - name: Build and Push docker image
+        if: steps.filters.outputs.frontend == 'true'
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/webapp-frontend:latest ./frontend
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/webapp-frontend:latest
@@ -29,13 +38,22 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Path Filter
+        uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            backend:
+              - 'backend/**'
       - name: Docker login
+        if: steps.filters.outputs.frontend == 'true'
         uses: docker/login-action@v3
         with: 
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
           logout: false
       - name: Build and Push docker image
+        if: steps.filters.outputs.frontend == 'true'
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/webapp-backend:latest ./backend
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/webapp-backend:latest
