--- a/.github/workflows/webapp.yml
+++ b/.github/workflows/webapp.yml
@@ -63,11 +63,24 @@ jobs:
     runs-on: self-hosted
     needs: [build-frontend, build-backend]
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4 
+      - name: Path Filter
+        uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            frontend:
+              - 'frontend/**'
+            backend:
+              - 'backend/**'
       - name: Deploy Frontend to PROD
+        if: steps.filter.outputs.frontend == 'true'
         run: |
           kubectl set image deployment/frontend-deployment frontend=mtararujs/webapp-frontend:latest
           kubectl rollout restart deployment/frontend-deployment
       - name: Deploy Backend to PROD
+        if: steps.filter.outputs.backend == 'true'
         run: |
           kubectl set image deployment/backend-deployment backend=mtararujs/webapp-backend:latest
           kubectl rollout restart deployment/backend-deployment
@@ -77,7 +90,17 @@ jobs:
     runs-on: self-hosted
     needs: [deploy-prod]
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4 
+      - name: Path Filter
+        uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            backend:
+              - 'backend/**'
       - name: Run API tests on PROD
+        if: steps.filter.outputs.backend == 'true'
         run: |
           docker pull mtararujs/api-tests:latest
           docker run --rm --network=host --name api-tests-prod mtararujs/api-tests:latest cucumber PLATFORM=PRD
