--- a/.github/workflows/webapp.yml
+++ b/.github/workflows/webapp.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Path Filter
         uses: dorny/paths-filter@v3
-        id: filter
+        id: filters
         with:
           filters: |
             frontend:
@@ -40,7 +40,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Path Filter
         uses: dorny/paths-filter@v3
-        id: filter
+        id: filters
         with:
           filters: |
             backend:
@@ -67,7 +67,7 @@ jobs:
         uses: actions/checkout@v4 
       - name: Path Filter
         uses: dorny/paths-filter@v3
-        id: filter
+        id: filters
         with:
           filters: |
             frontend:
@@ -75,12 +75,12 @@ jobs:
             backend:
               - 'backend/**'
       - name: Deploy Frontend to PROD
-        if: steps.filter.outputs.frontend == 'true'
+        if: steps.filters.outputs.frontend == 'true'
         run: |
           kubectl set image deployment/frontend-deployment frontend=mtararujs/webapp-frontend:latest
           kubectl rollout restart deployment/frontend-deployment
       - name: Deploy Backend to PROD
-        if: steps.filter.outputs.backend == 'true'
+        if: steps.filters.outputs.backend == 'true'
         run: |
           kubectl set image deployment/backend-deployment backend=mtararujs/webapp-backend:latest
           kubectl rollout restart deployment/backend-deployment
@@ -94,13 +94,13 @@ jobs:
         uses: actions/checkout@v4 
       - name: Path Filter
         uses: dorny/paths-filter@v3
-        id: filter
+        id: filters
         with:
           filters: |
             backend:
               - 'backend/**'
       - name: Run API tests on PROD
-        if: steps.filter.outputs.backend == 'true'
+        if: steps.filters.outputs.backend == 'true'
         run: |
           docker pull mtararujs/api-tests:latest
           docker run --rm --network=host --name api-tests-prod mtararujs/api-tests:latest cucumber PLATFORM=PRD
