--- a/.github/workflows/webapp.yml
+++ b/.github/workflows/webapp.yml
@@ -46,14 +46,14 @@ jobs:
             backend:
               - 'backend/**'
       - name: Docker login
-        if: steps.filters.outputs.frontend == 'true'
+        if: steps.filters.outputs.backend == 'true'
         uses: docker/login-action@v3
         with: 
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
           logout: false
       - name: Build and Push docker image
-        if: steps.filters.outputs.frontend == 'true'
+        if: steps.filters.outputs.backend == 'true'
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/webapp-backend:$GITHUB_SHA ./backend
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/webapp-backend:$GITHUB_SHA
