--- a/.github/workflows/webapp.yml
+++ b/.github/workflows/webapp.yml
@@ -68,12 +68,19 @@ jobs:
               - 'backend/**'
       - name: Deploy Frontend to PROD
         if: steps.filters.outputs.frontend == 'true'
-        run: |
-          kubectl set image deployment/frontend-deployment frontend=mtararujs/webapp-frontend:$GITHUB_SHA
+        uses: ./.github/actions/deploy
+        with: 
+          image_tag: ${{ secrets.DOCKERHUB_USERNAME }}/webapp-frontend:$GITHUB_SHA
+          deployment_name: frontend-deployment
+          container_name: frontend
       - name: Deploy Backend to PROD
         if: steps.filters.outputs.backend == 'true'
-        run: |
-          kubectl set image deployment/backend-deployment backend=mtararujs/webapp-backend:$GITHUB_SHA
+        uses: ./.github/actions/deploy
+        with: 
+          image_tag: ${{ secrets.DOCKERHUB_USERNAME }}/webapp-backend:$GITHUB_SHA
+          deployment_name: backend-deployment
+          container_name: backend
+
 
   api-tests-prod:
     name: API tests on PROD
